The games works
- the boards consists of 16 cards
- use flex and order property to shuffle cards

--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
     <script src="main.js" defer></script>
   </head>
   <body>
+    <p id="scores">0</p>
     <ul class="game">
-      <li class="card">😂</li>
-      <li class="card">🎾</li>
-      <li class="card">🎱</li>
-      <li class="card">💩</li>
+      <li class="card"><span>😂</span></li>
+      <li class="card"><span>🎾</span></li>
+      <li class="card"><span>🎱</span></li>
+      <li class="card"><span>💩</span></li>
+      <li class="card"><span>😂</span></li>
+      <li class="card"><span>🎾</span></li>
+      <li class="card"><span>🎱</span></li>
+      <li class="card"><span>💩</span></li>
+      <li class="card"><span>🎃</span></li>
+      <li class="card"><span>🎃</span></li>
+      <li class="card"><span>👁</span></li>
+      <li class="card"><span>👁</span></li>
+      <li class="card"><span>👀</span></li>
+      <li class="card"><span>👀</span></li>
+      <li class="card"><span>🧠</span></li>
+      <li class="card"><span>🧠</span></li>
     </ul>
   </body>
 </html>
